rgw: Drain async_processor request queue during shutdown

Drain outstanding requests from the async_processor before stopping
the sync threads to avoid any use-after-free of their local variables.

Fixes: https://tracker.ceph.com/issues/49666

Signed-off-by: Soumya Koduri <skoduri@redhat.com>
(cherry picked from commit 9b451763ff583f25c821aecf3446884c0fb95273)